HTML: Linkjes + Quote
- Danique link
- "..." gebruikt
- Alt="..." erin gezet

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <article>
             <div class="content">
                 <a href="https://abeeryu.github.io/your-tribe-profile-card/ " target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Abeer.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Abeer.png" alt="Abeer"> </div>
                     <div class="text">
                         <h3> Abeer </h3>
-                        <p> Whatever you are, be a good one.</p>
+                        <p> "Whatever you are, be a good one"</p>
                     </div>
                 </a>
             </div>
@@ -30,10 +30,10 @@
         <article>
             <div class="content">
                 <a href="https://akikosophia.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Akiko.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Akiko.png" alt="Akiko"> </div>
                     <div class="text">
                         <h3> Akiko </h3>
-                        <p> Life is like a box of chocolates, you never know what you get.</p>
+                        <p> "Life is like a box of chocolates, you never know what you get"</p>
                     </div>
                 </a>
             </div>
@@ -41,10 +41,10 @@
         <article>
             <div class="content">
                 <a href="https://anna-kyra.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Anna-Kyra.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Anna-Kyra.png" alt="Anna-Kyra"> </div>
                     <div class="text">
                         <h3> Anna-Kyra </h3>
-                        <p> A day without sunshine is like, you know night.</p>
+                        <p> "A day without sunshine is like, you know night"</p>
                     </div>
                 </a>
             </div>
@@ -52,10 +52,10 @@
         <article>
             <div class="content">
                 <a href="https://annelinderaadsheer.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Annelinde.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Annelinde.png" alt="Annelinde"> </div>
                     <div class="text">
                         <h3> Annelinde </h3>
-                        <p> Life has no ctrl+z</p>
+                        <p> "Life has no ctrl+z"</p>
                     </div>
                 </a>
             </div>
@@ -63,10 +63,10 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Charley.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Charley.png" alt="Charley"> </div>
                     <div class="text">
                         <h3> Charley </h3>
-                        <p> Professional Photographer </p>
+                        <p> "Professional Photographer" </p>
                     </div>
                 </a>
             </div>
@@ -74,10 +74,10 @@
         <article>
             <div class="content">
                 <a href="https://christoph3r3w.github.io/your-tribe-css-basics/#middle" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Christopher.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Christopher.png" alt="Christopher"> </div>
                     <div class="text">
-                        <h3> christopher </h3>
-                        <p> Controversieel quote.</p>
+                        <h3> Christopher </h3>
+                        <p> "Controversieel quote"</p>
                     </div>
                 </a>
             </div>
@@ -85,10 +85,10 @@
         <article>
             <div class="content">
                 <a href="https://cydstumpel.nl" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Cyd.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Cyd.png" alt="Cyd"> </div>
                     <div class="text">
                         <h3> Cyd </h3>
-                        <p> Jury at Awwwards </p>
+                        <p> "Jury at Awwwards" </p>
                     </div>
                 </a>
             </div>
@@ -96,21 +96,21 @@
         <article>
             <div class="content">
                 <a href="https://damianr2004.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Damian.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Damian.png" alt="Damian"> </div>
                     <div class="text">
                         <h3> Damian </h3>
-                        <p> Van de dokter mag ik maar 3 biertjes, nu heb ik 5 dokters. </p>
+                        <p> "Van de dokter mag ik maar 3 biertjes, nu heb ik 5 dokters" </p>
                     </div>
                 </a>
             </div>
         </article>
         <article>
             <div class="content">
-                <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Danique.png"> </div>
+                <a href="https://xxdaniquee.github.io/your-tribe-profile-card/" target="_blank">
+                    <div class="foto"> <img src="assets/ingekleurd/Danique.png" alt="Danique"> </div>
                     <div class="text">
                         <h3> Danique </h3>
-                        <p> Hier komt een quote. </p>
+                        <p> "Hier komt een quote" </p>
                     </div>
                 </a>
             </div>
@@ -118,10 +118,10 @@
         <article>
             <div class="content">
                 <a href="https://gitazeinstra.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Gita.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Gita.png" alt="Gita"> </div>
                     <div class="text">
                         <h3> Gita </h3>
-                        <p> There is no sunrise so beautiful that it is worth waking me up to see it. </p>
+                        <p> "There is no sunrise so beautiful that it is worth waking me up to see it" </p>
                     </div>
                 </a>
             </div>
@@ -129,10 +129,10 @@
         <article>
             <div class="content">
                 <a href="https://hadil24a.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Hadil.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Hadil.png" alt="Hadil"> </div>
                     <div class="text">
                         <h3> Hadil </h3>
-                        <p> When you turn and face the sunshine all the shadows fall behind you. </p>
+                        <p> "When you turn and face the sunshine all the shadows fall behind you" </p>
                     </div>
                 </a>
             </div>
@@ -140,10 +140,10 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Ilona.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Ilona.png" alt="Ilona"> </div>
                     <div class="text">
                         <h3> Ilona </h3>
-                        <p> Where`s Waldo? </p>
+                        <p> "Where`s Waldo?"" </p>
                     </div>
                 </a>
             </div>
@@ -151,10 +151,10 @@
         <article>
             <div class="content">
                 <a href="https://einanas.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Inez.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Inez.png" alt="Inez"> </div>
                     <div class="text">
                         <h3> Inez </h3>
-                        <p> My mind is like my browser, 19 tabs open and i have no idea where the music is coming from.
+                        <p> "My mind is like my browser, 19 tabs open and i have no idea where the music is coming from"
                         </p>
                     </div>
                 </a>
@@ -163,10 +163,10 @@
         <article>
             <div class="content">
                 <a href="https://jason2426.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Jason.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Jason.png" alt="Jason"> </div>
                     <div class="text">
                         <h3> Jason </h3>
-                        <p> They ain`t believe in us. GOD DID. </p>
+                        <p> "They ain`t believe in us. GOD DID" </p>
                     </div>
                 </a>
             </div>
@@ -174,10 +174,10 @@
         <article>
             <div class="content">
                 <a href="https://ovenmagnetron.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Jesse.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Jesse.png" alt="Jesse"> </div>
                     <div class="text">
                         <h3> Jesse </h3>
-                        <p> Geloof in jezelf </p>
+                        <p> "Geloof in jezelf" </p>
                     </div>
                 </a>
             </div>
@@ -185,10 +185,10 @@
         <article>
             <div class="content">
                 <a href="https://business.justinberghahn.nl/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Justin.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Justin.png" alt="Justin"> </div>
                     <div class="text">
                         <h3> Justin </h3>
-                        <p> Learn to love the darkness so we can see ourselves in the light. </p>
+                        <p> "Learn to love the darkness so we can see ourselves in the light" </p>
                     </div>
                 </a>
             </div>
@@ -196,10 +196,10 @@
         <article>
             <div class="content">
                 <a href="https://kaankalmi.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Kaan.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Kaan.png" alt="Kaan"> </div>
                     <div class="text">
                         <h3> Kaan </h3>
-                        <p> The world keeps getting hotter, But im too cool to die. </p>
+                        <p> "The world keeps getting hotter, But im too cool to die" </p>
                     </div>
                 </a>
             </div>
@@ -207,10 +207,10 @@
         <article>
             <div class="content">
                 <a href="https://krijnhoetmer.github.io/fdnd-your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Kiko.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Kiko.png" alt="Kiko"> </div>
                     <div class="text">
                         <h3> Kiko </h3>
-                        <p> Where`s Waldo? </p>
+                        <p> "Where`s Waldo?"" </p>
                     </div>
                 </a>
             </div>
@@ -218,10 +218,10 @@
         <article>
             <div class="content">
                 <a href="https://krijnhoetmer.github.io/fdnd-your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Krijn.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Krijn.png" alt="Krijn"> </div>
                     <div class="text">
                         <h3> Krijn </h3>
-                        <p> Semantic HTML is life </p>
+                        <p> "Semantic HTML is life" </p>
                     </div>
                 </a>
             </div>
@@ -229,10 +229,10 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Lemuel.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Lemuel.png" alt="Lemuel"> </div>
                     <div class="text">
                         <h3> Lemuel </h3>
-                        <p> I think we all change each other`s path. </p>
+                        <p> "I think we all change each other`s path" </p>
                     </div>
                 </a>
             </div>
@@ -240,10 +240,10 @@
         <article>
             <div class="content">
                 <a href="https://lisavanmansom.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Lisa.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Lisa.png" alt="Lisa"> </div>
                     <div class="text">
                         <h3> Lisa </h3>
-                        <p> Live Love Laugh </p>
+                        <p> "Live Love Laugh" </p>
                     </div>
                 </a>
             </div>
@@ -251,10 +251,10 @@
         <article>
             <div class="content">
                 <a href="https://metehan2003.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Metehan.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Metehan.png" alt="Metehan"> </div>
                     <div class="text">
                         <h3> Metehan </h3>
-                        <p> Today is your chance to build tomorrow </p>
+                        <p> "Today is your chance to build tomorrow" </p>
                     </div>
                 </a>
             </div>
@@ -262,10 +262,10 @@
         <article>
             <div class="content">
                 <a href="https://misahsaid.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Misah.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Misah.png" alt="Misah"> </div>
                     <div class="text">
                         <h3> Misah </h3>
-                        <p> Clients are the difference between design and art. </p>
+                        <p> "Clients are the difference between design and art" </p>
                     </div>
                 </a>
             </div>
@@ -273,10 +273,10 @@
         <article>
             <div class="content">
                 <a href="https://vayogj.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Nevayo.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Nevayo.png" alt="Nevayo"> </div>
                     <div class="text">
                         <h3> Nevayo </h3>
-                        <p> It`s not about whether i can. I have to do it. </p>
+                        <p> "It`s not about whether i can. I have to do it" </p>
                     </div>
                 </a>
             </div>
@@ -284,10 +284,10 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Patrick.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Patrick.png" alt="Patrick"> </div>
                     <div class="text">
                         <h3> Patrick </h3>
-                        <p> Home is where the heart is. </p>
+                        <p> "Home is where the heart is" </p>
                     </div>
                 </a>
             </div>
@@ -295,10 +295,10 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Robby.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Robby.png" alt="Robby"> </div>
                     <div class="text">
                         <h3> Robby </h3>
-                        <p> I never sleep, cause sleep is the cousin of death. </p>
+                        <p> "I never sleep, cause sleep is the cousin of death" </p>
                     </div>
                 </a>
             </div>
@@ -306,10 +306,10 @@
         <article>
             <div class="content">
                 <a href="https://ronabundy1.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Ronaldo.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Ronaldo.png" alt="Ronaldo"> </div>
                     <div class="text">
                         <h3> Ronaldo </h3>
-                        <p> I prefer to reserve time.</p>
+                        <p> "I prefer to reserve time"</p>
                     </div>
                 </a>
             </div>
@@ -317,10 +317,10 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Viktor.png"> </div>
+                    <div class="foto"> <img src="assets/ingekleurd/Viktor.png" alt="Viktor"> </div>
                     <div class="text">
                         <h3> Viktor </h3>
-                        <p> If you can make her giggle, you can make her cake jiggle. </p>
+                        <p> "If you can make her giggle, you can make her cake jiggle" </p>
                     </div>
                 </a>
             </div>
