--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600&family=Oleo+Script&family=Poppins&display=swap" rel="stylesheet">
     <title> Squadpage </title>
 </head>
 
 <body>
     <nav>
-        <h1> Jaarboek 1E</h1>
+        <h1 style="font-style: italic;"> Yearbook 2023</h1>
+        <h2>FDND squad 1E</h2>
     </nav>
     <main>
         <article>
@@ -30,7 +35,7 @@
         <article>
             <div class="content">
                 <a href="https://akikosophia.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Akiko.png" alt="Akiko"> </div>
+                    <div class="foto green"> <img src="assets/ingekleurd/Akiko.png" alt="Akiko"> </div>
                     <div class="text">
                         <h3> Akiko </h3>
                         <p> "Life is like a box of chocolates, you never know what you get"</p>
@@ -41,7 +46,7 @@
         <article>
             <div class="content">
                 <a href="https://anna-kyra.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Anna-Kyra.png" alt="Anna-Kyra"> </div>
+                    <div class="foto pink"> <img src="assets/ingekleurd/Anna-Kyra.png" alt="Anna-Kyra"> </div>
                     <div class="text">
                         <h3> Anna-Kyra </h3>
                         <p> "A day without sunshine is like, you know night"</p>
@@ -52,7 +57,7 @@
         <article>
             <div class="content">
                 <a href="https://annelinderaadsheer.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Annelinde.png" alt="Annelinde"> </div>
+                    <div class="foto lavender"> <img src="assets/ingekleurd/Annelinde.png" alt="Annelinde"> </div>
                     <div class="text">
                         <h3> Annelinde </h3>
                         <p> "Life has no ctrl+z"</p>
@@ -63,7 +68,7 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Charley.png" alt="Charley"> </div>
+                    <div class="foto green"> <img src="assets/ingekleurd/Charley.png" alt="Charley"> </div>
                     <div class="text">
                         <h3> Charley </h3>
                         <p> "Professional Photographer" </p>
@@ -74,7 +79,7 @@
         <article>
             <div class="content">
                 <a href="https://christoph3r3w.github.io/your-tribe-css-basics/#middle" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Christopher.png" alt="Christopher"> </div>
+                    <div class="foto lavender"> <img src="assets/ingekleurd/Christopher.png" alt="Christopher"> </div>
                     <div class="text">
                         <h3> Christopher </h3>
                         <p> "Controversieel quote"</p>
@@ -96,7 +101,7 @@
         <article>
             <div class="content">
                 <a href="https://damianr2004.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Damian.png" alt="Damian"> </div>
+                    <div class="foto pink"> <img src="assets/ingekleurd/Damian.png" alt="Damian"> </div>
                     <div class="text">
                         <h3> Damian </h3>
                         <p> "Van de dokter mag ik maar 3 biertjes, nu heb ik 5 dokters" </p>
@@ -118,7 +123,7 @@
         <article>
             <div class="content">
                 <a href="https://gitazeinstra.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Gita.png" alt="Gita"> </div>
+                    <div class="foto pink"> <img src="assets/ingekleurd/Gita.png" alt="Gita"> </div>
                     <div class="text">
                         <h3> Gita </h3>
                         <p> "There is no sunrise so beautiful that it is worth waking me up to see it" </p>
@@ -129,7 +134,7 @@
         <article>
             <div class="content">
                 <a href="https://hadil24a.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Hadil.png" alt="Hadil"> </div>
+                    <div class="foto green"> <img src="assets/ingekleurd/Hadil.png" alt="Hadil"> </div>
                     <div class="text">
                         <h3> Hadil </h3>
                         <p> "When you turn and face the sunshine all the shadows fall behind you" </p>
@@ -140,7 +145,7 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Ilona.png" alt="Ilona"> </div>
+                    <div class="foto lavender"> <img src="assets/ingekleurd/Ilona.png" alt="Ilona"> </div>
                     <div class="text">
                         <h3> Ilona </h3>
                         <p> "Where`s Waldo?"" </p>
@@ -151,7 +156,7 @@
         <article>
             <div class="content">
                 <a href="https://einanas.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Inez.png" alt="Inez"> </div>
+                    <div class="foto pink"> <img src="assets/ingekleurd/Inez.png" alt="Inez"> </div>
                     <div class="text">
                         <h3> Inez </h3>
                         <p> "My mind is like my browser, 19 tabs open and i have no idea where the music is coming from"
@@ -174,7 +179,7 @@
         <article>
             <div class="content">
                 <a href="https://ovenmagnetron.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Jesse.png" alt="Jesse"> </div>
+                    <div class="foto lavender"> <img src="assets/ingekleurd/Jesse.png" alt="Jesse"> </div>
                     <div class="text">
                         <h3> Jesse </h3>
                         <p> "Geloof in jezelf" </p>
@@ -185,7 +190,7 @@
         <article>
             <div class="content">
                 <a href="https://business.justinberghahn.nl/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Justin.png" alt="Justin"> </div>
+                    <div class="foto green"> <img src="assets/ingekleurd/Justin.png" alt="Justin"> </div>
                     <div class="text">
                         <h3> Justin </h3>
                         <p> "Learn to love the darkness so we can see ourselves in the light" </p>
@@ -196,7 +201,7 @@
         <article>
             <div class="content">
                 <a href="https://kaankalmi.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Kaan.png" alt="Kaan"> </div>
+                    <div class="foto green"> <img src="assets/ingekleurd/Kaan.png" alt="Kaan"> </div>
                     <div class="text">
                         <h3> Kaan </h3>
                         <p> "The world keeps getting hotter, But im too cool to die" </p>
@@ -207,7 +212,7 @@
         <article>
             <div class="content">
                 <a href="https://krijnhoetmer.github.io/fdnd-your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Kiko.png" alt="Kiko"> </div>
+                    <div class="foto pink"> <img src="assets/ingekleurd/Kiko.png" alt="Kiko"> </div>
                     <div class="text">
                         <h3> Kiko </h3>
                         <p> "Where`s Waldo?"" </p>
@@ -229,7 +234,7 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Lemuel.png" alt="Lemuel"> </div>
+                    <div class="foto lavender"> <img src="assets/ingekleurd/Lemuel.png" alt="Lemuel"> </div>
                     <div class="text">
                         <h3> Lemuel </h3>
                         <p> "I think we all change each other`s path" </p>
@@ -240,7 +245,7 @@
         <article>
             <div class="content">
                 <a href="https://lisavanmansom.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Lisa.png" alt="Lisa"> </div>
+                    <div class="foto lavender"> <img src="assets/ingekleurd/Lisa.png" alt="Lisa"> </div>
                     <div class="text">
                         <h3> Lisa </h3>
                         <p> "Live Love Laugh" </p>
@@ -251,7 +256,7 @@
         <article>
             <div class="content">
                 <a href="https://metehan2003.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Metehan.png" alt="Metehan"> </div>
+                    <div class="foto green"> <img src="assets/ingekleurd/Metehan.png" alt="Metehan"> </div>
                     <div class="text">
                         <h3> Metehan </h3>
                         <p> "Today is your chance to build tomorrow" </p>
@@ -262,7 +267,7 @@
         <article>
             <div class="content">
                 <a href="https://misahsaid.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Misah.png" alt="Misah"> </div>
+                    <div class="foto pink"> <img src="assets/ingekleurd/Misah.png" alt="Misah"> </div>
                     <div class="text">
                         <h3> Misah </h3>
                         <p> "Clients are the difference between design and art" </p>
@@ -284,7 +289,7 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Patrick.png" alt="Patrick"> </div>
+                    <div class="foto pink"> <img src="assets/ingekleurd/Patrick.png" alt="Patrick"> </div>
                     <div class="text">
                         <h3> Patrick </h3>
                         <p> "Home is where the heart is" </p>
@@ -306,7 +311,7 @@
         <article>
             <div class="content">
                 <a href="https://ronabundy1.github.io/your-tribe-profile-card/" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Ronaldo.png" alt="Ronaldo"> </div>
+                    <div class="foto green"> <img src="assets/ingekleurd/Ronaldo.png" alt="Ronaldo"> </div>
                     <div class="text">
                         <h3> Ronaldo </h3>
                         <p> "I prefer to reserve time"</p>
@@ -317,7 +322,7 @@
         <article>
             <div class="content">
                 <a href="#" target="_blank">
-                    <div class="foto"> <img src="assets/ingekleurd/Viktor.png" alt="Viktor"> </div>
+                    <div class="foto lavender"> <img src="assets/ingekleurd/Viktor.png" alt="Viktor"> </div>
                     <div class="text">
                         <h3> Viktor </h3>
                         <p> "If you can make her giggle, you can make her cake jiggle" </p>
