--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="foto"> <img src="assets/ingekleurd/Danique.png" alt="Danique"> </div>
                     <div class="text">
                         <h3> Danique </h3>
-                        <p> "Hier komt een quote" </p>
+                        <p> "Altijd opzoek naar Dopamine" </p>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
         </article>
         <article>
             <div class="content">
-                <a href="#" target="_blank">
+                <a href="https://robbyrisse.github.io/your-tribe-profile-card/kaartje%202.html" target="_blank">
                     <div class="foto"> <img src="assets/ingekleurd/Robby.png" alt="Robby"> </div>
                     <div class="text">
                         <h3> Robby </h3>
