--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     <div class="foto"> <img src="assets/ingekleurd/Nevayo.png" alt="Nevayo"> </div>
                     <div class="text">
                         <h3> Nevayo </h3>
-                        <p> "It`s not about whether i can. I have to do it" </p>
+                        <p> "Here i am, once feeling lost in now and then" </p>
                     </div>
                 </a>
             </div>
